[fix] align code for docker and kubernetes deployment

--- a/azure-vote/config_file.cfg
+++ b/azure-vote/config_file.cfg
@@ -3,4 +3,4 @@ TITLE = 'Azure Voting App'
 VOTE1VALUE = 'Cats'
 VOTE2VALUE = 'Dogs'
 SHOWHOST = 'false'
-REDIS = 'localhost'
+REDIS = 'azure-vote-back'
