--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -40,7 +40,7 @@ stages:
                 pip3 install opencensus-ext-azure
                 pip3 install flask
                 pip3 install opencensus-ext-flask
-
+                pip3 install opencensus-ext-requests
                 cd ~/
                 DIR=/home/udacityadmin/app
                 if [ ! -d "$DIR" ]; then
