--- a/azure-vote/Dockerfile
+++ b/azure-vote/Dockerfile
@@ -1,12 +1,8 @@
 # Pull the base image
-FROM tiangolo/uwsgi-nginx-flask:python3.6
-# Install depndencies 
-RUN pip install redis
-RUN pip install opencensus
-RUN pip install opencensus-ext-azure
-RUN pip install opencensus-ext-flask
-RUN pip install opencensus-ext-logging
-RUN pip install opencensus-ext-requests
-RUN pip install flask
+FROM tiangolo/uwsgi-nginx-flask:python3.8
+
 # Copy the content of the current directory to the /app of the container
 ADD . /app
+
+# Install depndencies 
+RUN pip install --requirement /app/requirements.txt
