--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,8 @@ services:
     environment:
       ALLOW_EMPTY_PASSWORD: "yes"
     ports:
-        - "6379:6379"
+      - "6379:6379"
+    hostname: azure-vote-back
 
   azure-vote-front:
     build: ./azure-vote
@@ -16,4 +17,4 @@ services:
     environment:
       REDIS: azure-vote-back
     ports:
-        - "8080:80"
+      - "8080:80"
